# ai_create_gm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  run.py
scripts/: activate_venv.ps1  run.ps1  run_tests.ps1
src/: main.py
src/gomoku/: __init__.py  ai_model.py  game.py  server.py
src/gomoku/static/: index.html
tests/: test_ai_visualization.py  test_basic_game.py  test_gomoku.py
