[tool.poetry]
name = "ai-create-gm"
version = "1.1.0"
description = "基于深度强化学习的五子棋AI项目"
authors = ["nighm <nighm@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.6"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
# 数据库支持
sqlalchemy = "^2.0"
psycopg2 = { version = "^2.9", optional = true }
# Web框架和AI相关依赖
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
numpy = "^1.26.0"
torch = "^2.2.0"
websockets = "^12.0"
python-multipart = "^0.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=html"
